[package]
name = "rptree"
version = "0.3.0"
edition = "2021"
authors = ["Night Cruising"]
license = "MIT"
description = "A command line tool for generating directory tree."
readme = "README.md"
repository = "https://github.com/night-cruise/rptree"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0.0"